# friends-network

./: .env.dev  .gitignore  README.md  docker-compose.yaml  pyproject.toml
case/: Dockerfile  requirements.txt
case/api/: enums.py  filters.py  serializers.py  tests.py  urls.py  views.py
case/app/: filters.py  models.py  serializers.py  tests.py  urls.py  views.py
case/app/migrations/: 0001_initial.py
case/case/: settings.py  urls.py
case/config/: asgi.py  settings.py  urls.py  wsgi.py
